# pi-topOS-Software

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pt-os-meta-exec
.github/workflows/: codeql.yml  generate-updated-os-images.yml  package-promotion-check.yaml  package-quality-check.yaml
.pt-os-meta-exec/docs/: conf.py
.pt-os-meta-exec/src/pt_os_meta_exec/: __main__.py  classes.py  lib.bash
.pt-os-meta-exec/src/pt_os_meta_exec/workflow-files/bullseye/: deb-build.yml  deb-release.yml
.pt-os-meta-exec/tests/: test_main.py
pt-os-meta-exec/: .cookiecutter.json  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  README.rst  noxfile.py  pyproject.toml
pt-os-meta-exec/docs/: index.rst  reference.rst
pt-os-meta-exec/src/pt_os_meta_exec/: __init__.py  __main__.py
scripts/: show-maintainer-scripts.sh  update-deb-workflow-files.sh
scripts/package-cloud-cli/: .pre-commit-config.yaml  MANIFEST.in  README.rst  setup.cfg
scripts/package-cloud-cli/src/package_cloud_cli/: __init__.py  __main__.py  classes.py
scripts/pt-os-meta-exec/: .pre-commit-config.yaml  LICENSE.rst  MANIFEST.in  setup.cfg
scripts/pt-os-meta-exec/docs/: usage.rst
scripts/pt-os-meta-exec/src/pt_os_meta_exec/: __main__.py  classes.py  lib.bash
scripts/pt-os-meta-exec/src/pt_os_meta_exec/workflow-files/buster/: deb-build.yml  deb-release.yml  deb-update-changelog.yml
scripts/pt-os-meta-exec/src/pt_os_meta_exec/workflow-files/master/: deb-build.yml  deb-release.yml
scripts/pt-os-meta-exec/tests/: __init__.py
workflow-files/deb/: deb-build.yml  deb-release.yml  deb-update-changelog.yml
