[metadata]
name = package-cloud-cli
version = 0.1.0
author = pi-top
author_email = os-dev@pi-top.com
maintainer = pi-top
maintainer_email = os-dev@pi-top.com
description = PackageCloud CLI
url = https://github.com/pi-top/pi-topOS-Software/
long_description = file: README.rst

[options]
packages = package_cloud_cli
package_dir =
     = src
install_requires =
    click>=8.0.1,<9.0.0
    click_logging>=1.0.0,<2.0.0
    linkheader_parser>=0.6,<1.0
    packaging>=20.4,<21.0
    requests>=2.25.1,<3.0.0
python_requires = >=3.6.1,<4.0.0
include_package_data = True

[options.entry_points]
console_scripts =
    package-cloud = package_cloud_cli.__main__:main

[bdist_wheel]
universal = 1

[flake8]
per-file-ignores =
    __init__.py: F401
    test_*: E402
# https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
extend-ignore = E203
max-line-length = 150

[isort]
profile = black
