[metadata]
name = pt-os-meta-exec
version = 0.1.0
author = Mike Roberts
author_email = os-dev@pi-top.com
maintainer =
maintainer_email =
description = pi-topOS meta-exec
url = https://github.com/m-roberts/pt-os-meta-exec
long_description = file: README.rst

[options]
packages = pt_os_meta_exec
package_dir =
     = src
install_requires =
    click>=8.0.1,<9.0.0
    pyfiglet>=0.8.post1,<0.9
python_requires = >=3.6.1,<4.0.0
include_package_data = True

[options.entry_points]
console_scripts =
    pt-os-meta-exec = pt_os_meta_exec.__main__:main
